# expense-tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: run.sh
src/: CMakeLists.txt
src/application/: CMakeLists.txt  expense_manager.cpp  expense_manager.cppm
src/core/: CMakeLists.txt  database.cppm  expense.cppm  expense_category.cppm
src/infrastructure/: CMakeLists.txt  expense_database.cpp  expense_database.cppm
tests/: CMakeLists.txt  main.cpp
tests/application/: CMakeLists.txt
tests/core/: CMakeLists.txt  database_tests.cpp  mock_database.hpp
tests/infrastructure/: CMakeLists.txt  expense_database_tests.cpp
